--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<div id="webgl"></div>
 <!--    <footer style="position:fixed; bottom: 0;width: 100%;height: 100px;background-color:red"></footer>-->
     
-    <script src="js/three.min.js"></script>
-	<script src="js/Detector.js"></script>		
-	<script src="js/TrackballControls.js"></script>
-    <script src="js/Dots.js"></script>
-	<script src="js/earth.js"></script> 
+    <script src="js/threeLib/three.min.js"></script>
+	<script src="js/threeLib/Detector.js"></script>
+	<script src="js/threeLib/TrackballControls.js"></script>
+    <script src="js/threeLib/Dots.js"></script>
+	<script src="js/threeLib/earth.js"></script>
     
 <!--    <script src="js/LatitudeLongitude.js"></script>-->
 </body>
