change folder structure

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 		.webgl-error a { color: #fff; }
         
     </style>
-   
-    <script src="js/threeLib/three.min.js"></script>
+
+	<script src="js/source/jquery.min.js"></script>
+    <script src="js/source/three.min.js"></script>
+	<script src="js/source/TrackballControls.js"></script>
 	<script src="js/threeLib/threeLibUtils.js"></script>
-	<script src="js/threeLib/TrackballControls.js"></script>
     <script src="js/threeLib/threeLibGateway.js"></script>
+	<script src="js/index.js"></script>
     
 </head>
 <body onload = "init()">
