--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         
     </style>
 
-	<script src="js/source/jquery.min.js"></script>
-    <script src="js/source/three.min.js"></script>
-	<script src="js/source/TrackballControls.js"></script>
+	<script src="js/resource/jquery.min.js"></script>
+    <script src="js/resource/three.min.js"></script>
+	<script src="js/resource/TrackballControls.js"></script>
 	<script src="js/threeLib/threeLibUtils.js"></script>
     <script src="js/threeLib/threeLibGateway.js"></script>
+	<script src="js/graphicLib/graphicLibUtils.js"></script>
+	<script src="js/graphicLib/graphicLibGateway.js"></script>
 	<script src="js/index.js"></script>
     
 </head>
