--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Earth</title>
 	<style>
-        html{width: 100%; height: 100%;}
-		body { width: 100%; height: 100%;margin: 0; overflow: hidden; background-color: #000; }
-        #webgl {
-            width: 100px;
-            height: 100px;
-        }
-		.webgl-error { font: 15px/30px monospace; text-align: center; color: #fff; margin: 50px; }
-		.webgl-error a { color: #fff; }
-        
+        /*html{width: 100%; height: 100%;}*/
+		/*body { width: 100%; height: 100%;margin: 0; overflow: hidden; background-color: #000; }*/
+        /*#webgl {*/
+            /*width: 100px;*/
+            /*height: 100px;*/
+        /*}*/
+		/*.webgl-error { font: 15px/30px monospace; text-align: center; color: #fff; margin: 50px; }*/
+		/*.webgl-error a { color: #fff; }*/
+
     </style>
 
 	<script src="js/resource/jquery.min.js"></script>
     <script src="js/resource/three.min.js"></script>
 	<script src="js/resource/TrackballControls.js"></script>
+
+	<link rel="stylesheet" href="css/index.css">
+
 	<script src="js/threeLib/threeLibUtils.js"></script>
     <script src="js/threeLib/threeLibGateway.js"></script>
 	<script src="js/graphicLib/graphicLibUtils.js"></script>
@@ -26,7 +29,7 @@
 	<script src="js/index.js"></script>
     
 </head>
-<body onload = "init()">
+<body>
 	
     <div id="webgl"></div>
 
