--- a/TestGraphicUtils.html
+++ b/TestGraphicUtils.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		
 		<title>Sample four temple to create svg </title>
 		<script src="./js/resource/d3.min.js"></script>
 		<script src="./js/graphicLib/graphicLibGateway.js"></script>
@@ -67,11 +67,35 @@
 					  {country:'blah2', counts:200},
 					  {country:'blah3', counts:200}];
 			
+		var yearlydata=[
+						{month:"Jan",counts:300},
+						{month:"Feb",counts:340},
+						{month:"Mar",counts:500},
+						{month:"Apr",counts:366},
+						{month:"May",counts:500},
+						{month:"Jun",counts:345},
+						{month:"Jul",counts:390},
+						{month:"Aug",counts:600},
+						{month:"Sep",counts:432},
+						{month:"Oct",counts:501},
+						{month:"Nov",counts:600},
+						{month:"Dev",counts:483}
+						];
+		
+		var seasonaldata=[
+				{dayrange:"1/1-1/10",counts:390},
+				{dayrange:"1/11-1/20",counts:300},
+				{dayrange:"1/21-1/30",counts:320},
+				{dayrange:"1/31-2/9",counts:308},
+				{dayrange:"2/10-2/19",counts:330},
+				{dayrange:"2/20-3/1",counts:350},
+				{dayrange:"3/2-3/11",counts:500},
+				{dayrange:"3/12-3/21",counts:300},
+				{dayrange:"3/22-3/31",counts:300}
+				];
 			
-		console.log(testinggeodata[0]);
-		console.log(dotgeodata[0]);
-		console.log(dotdepthdata[0]);
-		console.log(GraphicChart.createDepthDotChart);
+		console.log(yearlydata[0]);
+		console.log(GraphicChart.createYearlyBarChart);
 			
 		GraphicChart.createDepthDotChart(dotdepthdata,"#depthDot",null,"depth diagram");
 		console.log(GraphicChart.charts[0]);
@@ -81,6 +105,8 @@
 		window.addEventListener("resize",GraphicChart.update);
 
 		GraphicChart.createTop10PieChart(top10Data,"#top10",null,"top 10");
+		GraphicChart.createYearlyBarChart(yearlydata,"#yearly", null," yearly report");
+		GraphicChart.createSeasonalBarChart(seasonaldata,"#seasonal", null," seasonal report");
 		// var diagram2=new DotDiagram();
 		// console.log(diagram2.parseAlertsTimesMag)
 		// diagram2.render("./testdata/dotdata.json","#first",diagram2.parseAlertsTimesMag);
