--- a/TestGraphicUtils.html
+++ b/TestGraphicUtils.html
@@ -4,10 +4,12 @@
 		<meta charset="utf-8">
 		
 		<title>Sample four temple to create svg </title>
+		<script src="./js/resource/jquery.min.js"></script>
 		<script src="./js/resource/d3.min.js"></script>
 		<script src="./js/graphicLib/graphicLibGateway.js"></script>
 		<script src="./js/graphicLib/graphicLibUtils.js"></script>
 		<script src="./testgraphicdata/dotdata.js"></script>
+
 		<style>
 			body{
 				
@@ -30,6 +32,7 @@
 		<!-- <script src="./library/test.js"></script> -->
 	</head>
 	<body>
+		<button>delete graphic</button>
 		<div id="top10"></div>
 		<div id="depthDot">1</div>
 		<div id="second">2</div>
@@ -37,7 +40,7 @@
 		<div id ="seasonal"></div>
 
 		<script>
-			
+
 		testinggeodata.forEach(function(feature){
 			if(feature.properties.time>(new Date("2016-10-1")).getTime()){
 			var newitem={};
@@ -100,28 +103,23 @@
 				{dayrange:"3/22-3/31",counts:300}
 				];
 			
-		console.log(yearlydata[0]);
-		console.log(GraphicChart.createYearlyBarChart);
+		//console.log(yearlydata[0]);
+		//console.log(GraphicChart.createYearlyBarChart);
 			
 		GraphicChart.createDepthDotChart(dotdepthdata,"#depthDot",null,"depth diagram");
 		//console.log(GraphicChart.charts[0]);
 			
-		GraphicChart.createGeoDotChart(dotgeodata,"#second",null,"geo diagram");
-			
+		GraphicChart.createGeoDotChart(dotgeodata,"#second",null,"geo diagram","JPN");
+
 		window.addEventListener("resize",GraphicChart.update);
 
 		GraphicChart.createTop10PieChart(top10Data,"#top10",null,"top 10");
 		GraphicChart.createYearlyBarChart(yearlydata,"#yearly", null," yearly report");
 		GraphicChart.createSeasonalBarChart(seasonaldata,"#seasonal", null," seasonal report");
-		// var diagram2=new DotDiagram();
-		// console.log(diagram2.parseAlertsTimesMag)
-		// diagram2.render("./testdata/dotdata.json","#first",diagram2.parseAlertsTimesMag);
-		// var diagram1=new DotDiagram();
-		// diagram1.render("./testdata/dotdata.json","#second",diagram2.parseLatLngMag);
-		// window.addEventListener("resize",function(){diagram2.updateGraph();diagram1.updateGraph()});
-		// //diagram2.diagramSize(299,100).updateGraph();
 
-
+		$("button").click(function(){
+			GraphicChart.removeAll();
+		});
 
 		</script> 
 		<script>
