--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <button id="button1" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal">
         See Info
     </button>
-    <button id="button2" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#Modal2">
+    <button id="button2" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal2">
         6 Famous Earthquake
     </button>
     <button id="button3" class="btn btn-primary btn-lg">
@@ -68,7 +68,8 @@
     </div>
 </div>
 
-<div class="modal fade" id="Modal2" role="dialog">
+
+<div class="modal fade" id="modal2" role="dialog">
     <div class="modal-dialog">
 
       <!-- Modal content-->
