--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <button id="button2" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal2">
         6 Famous Earthquake
     </button>
-    <button id="button3" class="btn btn-primary btn-lg">
+    <button id="button3" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal3">
         About Us
     </button>
 </aside>
@@ -81,13 +81,32 @@
         <div class="modal-body">
           <p>Some text in the modal.</p>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
       </div>
 
     </div>
   </div>
+
+	<div class="modal fade" id="modal3" role="dialog">
+	    <div class="modal-dialog">
+
+	      <!-- Modal content-->
+	      <div class="modal-content">
+	        <div class="modal-header">
+	          <button type="button" class="close" data-dismiss="modal">&times;</button>
+	          <h4 class="modal-title">About Us</h4>
+	        </div>
+	        <div class="modal-body">
+	          <h5>This project is designed to raise attention of the audience on earthquake hazards.</h5>
+						<p>In order to raise awareness of the public, our project has created a 3D earth and historical earthquake
+							data points are added to 3D earth accordingly. Graphical analysis of earthquake magnitude v.s. time, number
+							of earthquakes v.s. monthly distribution, earthquake magnitude v.s. Geolocation are provided to user for additional
+							information . Users can also filter earthquake magnitude and countries information accordingly. Informations such as
+							6 famous earthquakes has also been added to the website feature. </p>
+					</div>
+	      </div>
+
+	    </div>
+	  </div>
 
 <div id="language">
     <select name="type" title="Select Language">
