center graphic heading

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             width:90px;
             display: none;
         }
+        .diagramHeader {
+            width:100%;
+            text-align:center;
+        }
 
     </style>
 
