--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">6 Famous Earthquakes</h4>
+                <h4 class="modal-title" id="famous">6 Famous Earthquakes</h4>
             </div>
             <div class="modal-body">
 
@@ -192,7 +192,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">About Us</h4>
+                <h4 class="modal-title" id="about">About Us</h4>
             </div>
             <div class="modal-body">
                 <h5>This project is designed to raise attention of the audience on earthquake hazards.</h5>
