--- a/index.html
+++ b/index.html
@@ -117,12 +117,11 @@
 
 <div class="modal fade" id="modal2" role="dialog">
     <div class="modal-dialog">
-
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">6 Famous Earthquakes</h4>
+                <h4 class="modal-title">Famous Earthquakes</h4>
             </div>
             <div class="modal-body">
 
