do some localization

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <script src="js/graphicLib/graphicLibUtils.js"></script>
     <script src="js/graphicLib/graphicLibGateway.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/pagination.js"></script>
+    <script src="js/resource/pagination.js"></script>
+    <script src="js/text.js"></script>
     <script src="testgraphicdata/dotdata.js"></script>
 
 </head>
@@ -63,18 +64,12 @@
 <div id="curtain"></div>
 
 <aside>
-    <img style="width: 60px;" src="img/logo.png">
-    <h2>Search Country</h2>
-    <input type="text" placeholder="Country">
-    <button id="button1" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal">
-        See Info
-    </button>
-    <button id="button2" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal2">
-        Famous Earthquake
-    </button>
-    <button id="button3" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal3">
-        About Us
-    </button>
+    <img src="img/logo.png">
+    <h2></h2>
+    <input type="text" placeholder="">
+    <button id="button1" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal"></button>
+    <button id="button2" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal2"></button>
+    <button id="button3" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modal3"></button>
 </aside>
 
 <div id="modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
