--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     &times;
                 </button>
-                <h4 class="modal-title" id="modalLabel">
-                    Country Earthquake Analysis
-                </h4>
+                <h4 class="modal-title" id="modalLabel"></h4>
             </div>
             <div id="chartArea" class="modal-body">
             </div>
@@ -98,7 +96,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Famous Earthquakes</h4>
+                <h4 class="modal-title"></h4>
             </div>
             <div class="modal-body">
 
@@ -168,7 +166,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title" id="about">About Us</h4>
+                <h4 class="modal-title" id="about"></h4>
             </div>
             <div class="modal-body">
                 <h5>This project is designed to raise attention of the audience on earthquake hazards.</h5>
