--- a/index.html
+++ b/index.html
@@ -100,57 +100,20 @@
             </div>
             <div class="modal-body">
 
-                <h5><a href="https://en.wikipedia.org/wiki/1906_San_Francisco_earthquake">1. San Francisco, California:
-                    April 18, 1906 (Magnitude: About 8)</a></h5>
-                <p>In response to growing forces on the Pacific and North American tectonic plates, a horizontal slip
-                    amounting to several yards occurred suddenly at 5:12 A.M. local time on the San Andreas Fault for a
-                    distance of more than 248 miles (400 kilometers). It went through the city and far outside it, down
-                    to a depth of about 6 miles (10 kilometers). This was one of the rare earthquakes in which the fault
-                    slip was easily visible at the Earth's surface. Brick buildings in the city collapsed. Even though
-                    most of the wooden frame buildings survived the strong shaking, they did not survive the fires that
-                    burned for days over several hundred city blocks. The fires caused most of the death toll — about
-                    500 people.</p>
+                <h5><a href="https://en.wikipedia.org/wiki/1906_San_Francisco_earthquake"></a></h5>
+                <p></p>
 
-                <h5><a href="https://en.wikipedia.org/wiki/1923_Great_Kant%C5%8D_earthquake">2. Tokyo, Japan: September
-                    1, 1923 (Magnitude: About 8.25)</a></h5>
-                <p>In the years following the San Francisco disaster, a young Japanese seismologist tried to persuade
-                    his older colleagues that Tokyo should be prepared for another earthquake like the one in 1703 that
-                    had been very destructive. His warnings were not heeded, and in 1923 a great earthquake caused
-                    extensive damage in Yokohama and Tokyo by direct shaking and by fires. About 140,000 people
-                    died.</p>
+                <h5><a href="https://en.wikipedia.org/wiki/1923_Great_Kant%C5%8D_earthquake"></a></h5>
+                <p></p>
 
-                <h5><a href="https://en.wikipedia.org/wiki/1960_Valdivia_earthquake">3. Chile: May 22, 1960 (Magnitude:
-                    About 9)</a></h5>
-                <p>Forces pushing the Pacific and the South American tectonic plates together caused a fault slip of
-                    about 66 feet on a fault surface that was so large — more than 620 miles long and about 124 miles
-                    wide — that we associate this earthquake with an entire country. This was one of the two largest
-                    earthquakes, in terms of seismic moment, in a century. At the time, there were few instruments
-                    operating that could measure very long surface waves. But from the available records, it was
-                    apparent for days after this earthquake that the shock made the whole Earth ring like a gigantic
-                    bell.</p>
+                <h5><a href="https://en.wikipedia.org/wiki/1960_Valdivia_earthquake"></a></h5>
+                <p></p>
 
-                <h5><a href="https://en.wikipedia.org/wiki/1964_Alaska_earthquake">4. Anchorage, Alaska: March 27, 1964
-                    (Magnitude: About 8.5)</a></h5>
-                <p>Growing forces pushing the Pacific and the North American tectonic plates toward each other caused
-                    the Pacific plate to slip about 42 feet at an angle beneath Alaska and beneath the seafloor just
-                    south of the port of Anchorage, which was destroyed. Seismometers that detect surface waves around
-                    the world were knocked off scale for hours. When recording resumed, they were measuring surface
-                    waves that continued to go around the Earth for several days, again as if the whole Earth were
-                    ringing and at exactly the same frequencies as the great Chilean earthquake nearly 4 years earlier.
-                    Large amounts of water were almost immediately moved up or down several yards because the main fault
-                    surface that broke was beneath the ocean floor. This seafloor motion caused a tsunami, or water
-                    wave, that traveled all over the Pacific Ocean, causing further damage, even killing people on a
-                    beach in California.</p>
+                <h5><a href="https://en.wikipedia.org/wiki/1964_Alaska_earthquake"></a></h5>
+                <p></p>
 
-                <h5><a href="https://en.wikipedia.org/wiki/2004_Indian_Ocean_earthquake_and_tsunami">6. Sumatra,
-                    Indonesia, Dec. 26, 2004. (Magnitude: About 9.0)</a></h5>
-                <p>A 9.0 magnitude earthquake — the largest earthquake in 40 years — caused a powerful tsunami in the
-                    Indian Ocean that devastated 12 Asian countries. The earthquake's epicenter was off the west coast
-                    of the Indonesian Island of Sumatra. A week later the death toll was estimated at 150,000 — a month
-                    later some estimate double that number. Hardest hit were Indonesia (particularly the province of
-                    Aceh), Sri Lanka, India, Thailand, and the Maldives. Millions of people lost their homes. Since
-                    entire families and towns were destroyed and bodies were swept out to sea, it's possible we will
-                    never know the total number lives lost.</p>
+                <h5><a href="https://en.wikipedia.org/wiki/2004_Indian_Ocean_earthquake_and_tsunami"></a></h5>
+                <p></p>
 
             </div>
 
@@ -187,9 +150,9 @@
 
 <div id="language">
     <select name="type" title="Select Language">
-        <option value="">Language</option>
-        <option value="english">English</option>
-        <option value="chinese">Chinese</option>
+        <option value=""></option>
+        <option value="english"></option>
+        <option value="chinese"></option>
     </select>
 </div>
 
