--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="js/index.js"></script>
     <script src="js/resource/pagination.js"></script>
     <script src="js/text.js"></script>
+    <script src="js/localization.js"></script>
     <script src="testgraphicdata/dotdata.js"></script>
 
 </head>
@@ -47,16 +48,16 @@
 <img id="smallIcon" src="img/logo.png">
 
 <nav id="hideNav">
-    <h2>Search Country</h2>
-    <input type="text" placeholder="Country">
-    <button id="smallButton1" class="btn" data-toggle="modal" data-target="#modal">See Info</button>
-    <button id="smallButton2" class="btn" data-toggle="modal" data-target="#modal2">Famous Earthquake</button>
-    <button id="smallButton3" class="btn" data-toggle="modal" data-target="#modal3">About Us</button>
+    <h2></h2>
+    <input type="text" placeholder="">
+    <button id="smallButton1" class="btn" data-toggle="modal" data-target="#modal"></button>
+    <button id="smallButton2" class="btn" data-toggle="modal" data-target="#modal2"></button>
+    <button id="smallButton3" class="btn" data-toggle="modal" data-target="#modal3"></button>
     <div>
         <select name="type" title="Select Language">
-            <option value="">Language</option>
-            <option value="english">English</option>
-            <option value="chinese">Chinese</option>
+            <option value=""></option>
+            <option value="english"></option>
+            <option value="chinese"></option>
         </select>
     </div>
 </nav>
@@ -92,7 +93,6 @@
 
 <div class="modal fade" id="modal2" role="dialog">
     <div class="modal-dialog">
-        <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -124,24 +124,14 @@
 
 <div class="modal fade" id="modal3" role="dialog">
     <div class="modal-dialog">
-
-        <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title" id="about"></h4>
             </div>
             <div class="modal-body">
-                <h5>This project is designed to raise attention of the audience on earthquake hazards.</h5>
-                <p>In order to raise awareness of the public, our project has created a 3D earth and historical
-                    earthquake
-                    data points are added to 3D earth accordingly. Graphical analysis of earthquake magnitude v.s. time,
-                    number
-                    of earthquakes v.s. monthly distribution, earthquake magnitude v.s. Geolocation are provided to user
-                    for additional
-                    information . Users can also filter earthquake magnitude and countries information accordingly.
-                    Informations such as
-                    6 famous earthquakes has also been added to the website feature. </p>
+                <h5></h5>
+                <p></p>
             </div>
         </div>
 
