fix loss data bug

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                 <h5><a href="https://en.wikipedia.org/wiki/1964_Alaska_earthquake"></a></h5>
                 <p></p>
 
+                <h5><a href="https://en.wikipedia.org/wiki/1976_Tangshan_earthquake"></a></h5>
+                <p></p>
+
                 <h5><a href="https://en.wikipedia.org/wiki/2004_Indian_Ocean_earthquake_and_tsunami"></a></h5>
                 <p></p>
 
