--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     renderPagination(20, 1);
 
     var dataLink = {
-        "onload": "/API/Initialize",
+        "onLoad": "/API/Initialize",
         "top10": "/API/top10",
         "dotData": "/API/DotData",
         "yearData": "/API/yearData",
